<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_gradient"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/ivSplashLogo"
        android:layout_width="@dimen/logo_size_splash"
        android:layout_height="@dimen/logo_size_splash"
        android:src="@drawable/app_icon"
        android:scaleType="fitCenter"
        android:contentDescription="@string/cd_logo" />

    <TextView
        android:id="@+id/tvSplashName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/app_name_stylized"
        android:fontFamily="@font/playfair_display"
        android:textSize="40sp"
        android:textColor="@color/header_text"
        android:textStyle="bold|italic"
        android:letterSpacing="0.02" />

    <!-- Tagline dorée -->
    <View
        android:layout_width="60dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@color/secondary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/app_tagline"
        android:fontFamily="@font/lato"
        android:textSize="@dimen/text_caption"
        android:textColor="@color/secondary"
        android:letterSpacing="0.1"
        android:textAllCaps="true" />

</LinearLayout>
